--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -23,3 +23,7 @@
 .login_card{
     box-shadow: 5px 5px 8px 10px #cacaca;
 }
+.spinner-border{
+    margin-left: 1rem;
+    margin-bottom : 0.3rem;  
+}
